Add fake arm initial implementation

--- a/rr_interfaces/CMakeLists.txt
+++ b/rr_interfaces/CMakeLists.txt
@@ -39,6 +39,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
     "msg/InReach.msg" 
     "msg/NewItem.msg" 
     "msg/TakeItem.msg"
+    "msg/ItemLocation.msg"
 )
 
 
