--- a/fake_arm/package.xml
+++ b/fake_arm/package.xml
@@ -16,5 +16,6 @@
     <build_type>ament_python</build_type>
   </export>
   <exec_depend>rr_interfaces</exec_depend>
+  <exec_depend>load_config</exec_depend>
 
 </package>
