Add experimental gui log

--- a/conveior_belt/package.xml
+++ b/conveior_belt/package.xml
@@ -17,5 +17,7 @@
   </export>
   <exec_depend>rr_interfaces</exec_depend>
   <exec_depend>load_config</exec_depend>
+  <exec_depend>gui_log</exec_depend>
+
 
 </package>
