--- a/gui_log/package.xml
+++ b/gui_log/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>fake_arm</name>
+  <name>gui_log</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="ros@todo.todo">ros</maintainer>
@@ -15,8 +15,4 @@
   <export>
     <build_type>ament_python</build_type>
   </export>
-  <exec_depend>rr_interfaces</exec_depend>
-  <exec_depend>load_config</exec_depend>
-  <exec_depend>gui_log</exec_depend>
-
 </package>
